--- a/estilo/quizEstilo.css
+++ b/estilo/quizEstilo.css
@@ -50,12 +50,16 @@ body{
     transition: all 0.3s;
 }
 
-.btn:hover{
+.btn:hover:not([disabled]){
     background-color: #30526A;
     color: #D1EDF1;
 }
 
-#proximo{
+.btn:disabled{
+    cursor: no-drop;
+}
+
+#next-btn{
     background-color: #EF2C5F;
     color: #fff;
     font-weight: 500;
@@ -65,5 +69,13 @@ body{
     margin: 10px auto 0;
     border-radius: 4px;
     cursor: pointer;
-    display: block;
+    display: none;
+}
+
+.correct{
+    background: #9aeabc;
+}
+
+.incorrect{
+    background: #ff9393;
 }
