--- a/estilo/quizEstilo.css
+++ b/estilo/quizEstilo.css
@@ -79,3 +79,10 @@ body{
 .incorrect{
     background: #ff9393;
 }
+
+@media (max-width: 425px){
+    .conteiner {
+        width: 90%;
+        margin: 10px auto 10px;
+    }
+}
