--- a/estilo/quizEstilo.css
+++ b/estilo/quizEstilo.css
@@ -83,6 +83,6 @@ body{
 @media (max-width: 425px){
     .conteiner {
         width: 90%;
-        margin: 10px auto 10px;
+        margin: 20px auto 0;
     }
 }
