--- a/estilo/quizEstilo.css
+++ b/estilo/quizEstilo.css
@@ -80,6 +80,20 @@ body{
     background: #ff9393;
 }
 
+footer{
+    height: 50px;
+    width: 90%;
+    margin: 10px auto 0;
+    border-radius: 10px;
+    background-color: #5EC9CC;
+}
+
+h3{
+    font-size: 15px;
+    margin-top: 10px;
+    color: #3a4046;
+}
+
 @media (max-width: 425px){
     .conteiner {
         width: 90%;
